# wasi-crypto-preview

./: Cargo.toml  README.md
.github/: dependabot.yml
doc/: wasi-crypto.md
docs/: wasi-crypto.md
implementation/: Cargo.toml
implementation/src/: array_output.rs  ecdsa.rs  eddsa.rs  error.rs  lib.rs  options.rs  rand.rs  rsa.rs  signature.rs  signature_keypair.rs  signature_op.rs  signature_publickey.rs
implementation/src/asymmetric_common/: keypair.rs  managed_keypair.rs  mod.rs  publickey.rs  secretkey.rs  wasi_glue.rs
implementation/src/key_exchange/: keypair.rs  mod.rs  publickey.rs  secretkey.rs  x25519.rs
implementation/src/key_exchange/dh/: x25519.rs
implementation/src/signatures/: ecdsa.rs  eddsa.rs  keypair.rs  keypair_manager.rs  mod.rs  publickey.rs  rsa.rs  secretkey.rs  signature.rs  signature_keypair.rs  signature_keypair_manager.rs  signature_op.rs  signature_publickey.rs
implementation/src/symmetric/: aes_gcm.rs  chacha_poly.rs  hkdf.rs  hmac_sha2.rs  key.rs  key_manager.rs  managed_key.rs  mod.rs  sha2.rs  state.rs  symmetric_key.rs  tag.rs  wasi_glue.rs  xoodyak.rs
implementation/wig/: Cargo.toml
implementation/wig/WASI/phases/snapshot/witx/: wasi_crypto.witx
implementation/wig/src/: hostcalls.rs
implementation/witx/: proposal_external.witx
src/: ecdsa.rs  eddsa.rs  error.rs  handles.rs  main.rs  rsa.rs  signature.rs  signature_keypair.rs  signature_op.rs
witx/: Makefile  proposal_asymmetric_common.md  proposal_asymmetric_common.witx  proposal_common.md  proposal_common.witx  proposal_external_secrets.md  proposal_external_secrets.witx  proposal_kx.md  proposal_kx.witx  proposal_signatures.md  proposal_signatures.witx  proposal_symmetric.md  (+5 more)
(+18 files in other folders)
