[package]
name = "wasi-crypto-preview"
version = "0.1.1"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "WASI crypto module proposal"
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://github.com/jedisct1/wasi-crypto-preview"
repository = "https://github.com/jedisct1/wasi-crypto-preview"

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
curve25519-dalek = "3"
derivative = "2.1"
parking_lot = "0.11"
pqcrypto = { version = "0.11", default-features = false, features = ["pqcrypto-kyber"] }
ring = "0.17.0-alpha"
thiserror = "1.0"
wiggle = "0.20"
xoodyak = "0.5"
zeroize = "1.1"
