[package]
name = "wasi-crypto"
version = "0.1.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"

[dependencies]
aes-gcm = "0.8"
anyhow = "1.0"
byteorder = "1.3"
curve25519-dalek = "3"
ed25519-dalek = "1"
derivative = "2.1"
getrandom = "0.2"
hkdf = "0.10"
hmac = "0.10"
parking_lot = "0.11"
pqcrypto = { version = "0.11", default-features = false, features = ["pqcrypto-kyber"], optional = true }
rand_core = "0.5"
ring = "0.16"
sha2 = "0.9"
subtle = "2.3"
thiserror = "1.0"
wiggle = "0.21"
xoodyak = "0.7"
zeroize = "1.1"

[features]
default = ["pqcrypto"]
